  - [scheduler] allows noop/cosystem/standby to start on resources in standby,
        no wake-up is triggered (requires activating energy saving).
  - [oarsub] use jobkey (-k) is the OAR_JOB_KEY_FILE env variable  is set.
  - [oarstat] fix accounting display.
  - [oar_resources_init] fix HyperThreading bug + improve CLI.
  - [oar_resources_add] make HyperThreading optional + fix long options.
  - [admission rules] rewrite the job type check rule.
  - [admission rules] fix oaradmissionrules bug with MySQL when modifying a rule
  - [oar-node] fix pid in init script.
  - [api] some optimizations + rework authentication configuration (apache).
  - [api][drawgantt-svg][monika] fix apache config (apache 2.4).
  - [drawgantt-svg] new version with aggreation of resources and more.
  - [monika] add thread to the hidden properties.
  - [api] fastcgi config now using suexec (have to enable it inside the fastcgi
        module configuration: FastCgiWrapper /usr/lib/apache2/suexec
  - [api] now using apache environment variables when headers are not available 
  - [api] optimization of /jobs query response time (especially efficient for
        mysql based installations)
  - [api] [security] Html output did not break on errors

version 2.5.4:
--------------
  
  - [api] Implemented GET /resources/<property>/jobs to get jobs running on
        resources, grouped by a given property.
  - [api] Implemented HTTP_X_API_PATH_PREFIX header variable to prefix all
        returned URIs.
  - [api] Added GET /jobs/<id>/details support.
  - [api] Implemented the ability to get a set of jobs at once with
    GET /jobs?ids=<id1>:<id2>:<id3>:...
  - [api] BUGFIX: stderr and stdout where reversed.
  - [api] BUGFIX: memory leak in the API when used with FastCGI.
  - [api] Rewritten/commented apache config file.
  - [kamelot] BUGFIX: fix hierarchies manipulation (remove toplevel resource).
  - [accounting] Fixed a memory leak and a rare case of bad consumption count.