@@ -2,3 +2,5 @@ export PREFIX?=/usr
 
 export SETUP_TYPE?=deb
 export TARGET_DIST?=debian
+
+export CGIDIR?=$(PREFIX)/lib/cgi-bin
