@@ -1,3 +1,5 @@
 export PREFIX?=/usr/local
 export SETUP_TYPE?=tgz
 export TARGET_DIST?=debian
+
+export CGIDIR?=$(PREFIX)/lib/cgi-bin
