@@ -4,7 +4,6 @@ export TARGET_DIST?=redhat
 export PREFIX?=/usr/local
 
 export WWWDIR?=/usr/share/oar-web-status
-export CGIDIR?=/var/www/cgi-bin
 export PERLLIBDIR?=$(PREFIX)/share/perl5
 export INITDIR?=$(ETCDIR)/rc.d/init.d
 export DEFAULTDIR?=$(ETCDIR)/sysconfig
