@@ -1,11 +1,14 @@
-# Example Apache2 configuration for the OAR API
+# Apache2 configuration for the OAR API
+
+# WARNING: the OAR API requires Apache fastcgi and a way for the httpd user to
+# become oar. This can be achieved using Apache suexec. But since the suexec
+# mechanism is global to a virtual host, enabling it for the OAR API might
+# break other CGI programs (e.g. monika). As a result, it could be necessary to
+# setup several virtual hosts. Furthermore the suexec user cannot have a system
+# UID, which is the case of the oar user by default. One may need to change
+# that uid (e.g. on Centos).
 
 # Aliases to the API.
-# Be aware that the oarapi directory should only be readable by the httpd 
-# daemon and that the cgi inside are sgid oar. Any change to this permissions
-# may cause your system to be vulnerable. 
-# You should also check that you have a <Location> directive for each
-# of these aliases  (security issue, see later!)
 ScriptAlias /oarapi %%CGIDIR%%/oarapi/oarapi.cgi
 ScriptAlias /oarapi-public %%CGIDIR%%/oarapi/oarapi.cgi
 #ScriptAlias /oarapi-debug %%CGIDIR%%/oarapi-debug.cgi
@@ -32,23 +35,15 @@ ScriptAlias /oarapi-public %%CGIDIR%%/oarapi/oarapi.cgi
      AddHandler fcgid-script .cgi
   </IfModule>
 
-  <ifModule version.c>
-    <IfVersion >= 2.3>
-      Require local
-    </IfVersion> 
-    <IfVersion < 2.3>
-      Order Deny,Allow
-      Deny from all
-      Allow from             localhost
-      Allow from             localhost.localdomain
-    </IfVersion>   
-  </ifModule>
-  <ifModule !version.c>
+  <IfVersion >= 2.3>
+    Require local
+  </IfVersion> 
+  <IfVersion < 2.3>
     Order Deny,Allow
     Deny from all
     Allow from             localhost
     Allow from             localhost.localdomain
-  </ifModule>
+    </IfVersion>   
 </Directory>
 
 # Set the X_API_PATH_PREFIX variable to value of the header of the same name
