@@ -32,6 +32,10 @@ Delete rule #rule-id
 
 Show, create, modify or delete admission rules.
 
+Admission rules are executed within oarsub. As a result, they provide to the administrator a mechanism to deeply interact with the job submission (e.g.: check or modify the resource request or job types set by the user).
+
+Rules are run by order of priority, from the lower to the higher value.
+
 =head1 OPTIONS
 
 =over
@@ -80,9 +84,9 @@ Write script to file (%% replaced by #rule-id)
 
 =over
 
-=item B<-e, --edit> [cmd]
+=item B<-e, --edit> [command]
 
-edit script using editor or cmd if provided
+Edit script using the default editor, or command if provided
 
 =item B<-r, --from-file> <filename>
 
@@ -90,7 +94,7 @@ Read script from file instead of running editor
 
 =item B<-P, --priotity> <priority>
 
-Set priority for rule
+Set priority value for rule
 
 =item B<-Y, --enabled>
 
@@ -118,4 +122,4 @@ Print OAR version
 
 =head1 COPYRIGHTS
 
- Copyright 2003-2014 Laboratoire d'Informatique de Grenoble (http://www.liglab.fr). This software is licensed under the GNU General Public License Version 2 or above. There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+ Copyright 2003-2015 Laboratoire d'Informatique de Grenoble (http://www.liglab.fr). This software is licensed under the GNU General Public License Version 2 or above. There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
